<resources>
    <string name="app_name">MyUFMS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_cadastrar">Cadastrar-se</string>
    <string name="btn_entrar">Entrar</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="input_complete_name">Nome Completo</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="hint_phone">Número de Telefone</string>
    <string name="hint_birthdate">Data de nascimento</string>
    <string name="txt_already_have_account">Já possui conta?</string>
</resources>